ejemplos/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: wordpress
  labels:
    app: wordpress
    type: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: frontend
    spec:
      containers:
        - name: wordpress
          image: wordpress
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
